--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	.top>div{
 		height: 30px;
 		width: 1200px;
+		padding-top: 3px;
 		margin: 0 auto;
 	}
 	.top-left{
@@ -250,18 +251,23 @@
     	font-size: 14px;
     }
     .bottom-b{
+    	height: 100px;
+    	width: 1200px;
+    	margin: 0 auto;
+    }
+    .bottom-b>div{
     	width: 575px;
     	height: 100px;
     	padding-top: 20px;
-    	margin-left: 325px;
+    	margin-left: 300px;
     }
-    .bottom-b>div{
+    .bottom-b>div>div{
     	text-align: center;
     	font-size: 14px;
     	margin-bottom: 20px;
     	color: #a4a4a4;
     }
-    .bottom-b>div>a{
+    .bottom-b>div>div>a{
     	color: #a4a4a4;
     }
 	</style>
@@ -464,6 +470,7 @@
 		</div>
 		<div class="bottom-b">
 			<div>
+			 <div>
 			<a href="*">E族生活</a>
 			|
 			<a href="*">居家维修保养</a>
@@ -480,6 +487,7 @@
 			</div>
 			<div>
 				© 2017-2018 E族之家 版权所有，并保留所有权利。ICP备案证书号：粤ICP备17127392号
+			</div>
 			</div>
 		</div>
 	</div>
